--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div id="main">
 
     </div>
-    <form >
+    <form id="searchbox">
         <input type="text" placeholder="You read this you dumb ass">
     </form>
-    <h1>Not my first html file</h1>
+    <div><h1 id="h1">Not my first html file</h1></div>
     <p align="center" > Portfolio Page (Don't know what this mean either) </p>
     <b>Bold</b>
     <br>
